# awesome-motoko

./: .gitignore  README.md  dfx.json
.dfx/: icx-proxy-pid
.dfx/local/: canister_ids.json
.dfx/replica-configuration/: replica-1.port  replica-pid
basic_syntax/arrays/: main.mo
basic_syntax/creating_new_class/: NewClass.mo  main.mo
basic_syntax/hashmap/: main.mo
basic_syntax/intercanister/: main.mo  othercanister.mo  thirdcanister.mo
basic_syntax/lists/: main.mo
basic_syntax/loops/: main.mo
basic_syntax/options/: main.mo
basic_syntax/order/: main.mo
basic_syntax/text_handling/: main.mo
basic_syntax/tries/: main.mo
basic_syntax/variants/: main.mo
lectures/admins-errors-cycles/: dfx.json  readme.md
lectures/create_read_update_delete/: crud.mo  dfx.json
lectures/deploying_website_internet_computer/: README.md  dfx.json  index.html  package-lock.json  package.json  teacher's notes.md  vite.config.js
lectures/mutable_state_shared_type/: README.md  dfx.json  main.mo
lectures/storing_data_and_keeping_them_secure/: Cargo.toml  README.md  build.js  dfx.json  webpack.config.js
lectures/storing_data_and_keeping_them_secure/lecture/: Cargo.toml
lectures/storing_data_and_keeping_them_secure/lecture/src/: btreemap.rs  common_types.rs  hashmap.rs  lib.rs  management.rs  upgrade.rs
lectures/token-standards/: readme.md
lessons/day_1/: CHALLENGE.MD  README.MD  solution.mo
lessons/day_2/: CHALLENGE.MD  README.MD  solution.mo
lessons/day_3/: CHALLENGE.MD  README.md
lessons/day_4/: CHALLENGE.MD  README.MD
lessons/day_5/: CHALLENGE.MD  (+1 more)
(+128 files in other folders)
