[package]
name = "lecture"
version = "0.1.0"
authors = ["Nima Rasooli <nima@fleek.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-kit = "0.4.4"
ic-cdk = "0.4"
ic-cdk-macros = "0.3"
ic-types = "0.1.3"
serde = "1.0.116"
serde_bytes = "0.11.5"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }